--- a/style.css
+++ b/style.css
@@ -23,4 +23,13 @@
 #padre{
     position:relative;
     background-color: green;
-    }
+}
+
+#uno {
+    position: absolute;
+    top: 200px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 250px;
+}
