--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-.table {
-    width: 50%; 
-    margin: 0 auto;
-}
-
-.row-table {
-    height: 90px;
-}
-
 .nav_bar_labels {
     font-size: 10px;
     font-weight: bold;
@@ -20,18 +11,27 @@
     color: rosybrown;
 }
 
-#padre{
-    position:relative;
-    background-color: green;
+.test {
+    margin-left: 50px;
 }
 
-#uno {
-    position: absolute;
-    top: 200px;
-    left: 0;
-    right: 0;
+
+.table {
+    width: 50%; 
     margin: 0 auto;
-    width: 250px;
+}
+
+.row-table {
+    height: 90px;
+}
+
+.container__label {
+    transform: translate(700px, 200px);
+}
+
+.container {
+    width: 100%;
+    height: 500px;
 }
 
 .left{
@@ -48,8 +48,59 @@
     float: right; 
 }
 
+.table__img {
+    width: 100px;
+    height: 40px;
+    margin-right: 60px;
+}
+
+
+#padre{
+position:relative;
+background-color: green;
+}
+
+#uno {
+position: absolute;
+top: 200px;
+left: 0;
+right: 0;
+margin: 0 auto;
+width: 250px;
+}
+
+.test {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-25%, -25%);
+    align-items: center;
+}
+
+.label {
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 800;
+}
+
+.label-subtext {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
+}
+
 .container__img {
     width: 180px;
     height: 50px;
     margin-right: 60px;
+}
+
+.content {
+    margin-top:auto;
+    margin-bottom:auto;
+    text-align:center;
+}
+
+.text__label {
+    color: white;
 }
