--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@
 }
 
 
-.container {
+.table {
     width: 50%; 
     margin: 0 auto;
 }
 
-.container__table-row {
+.row-table {
     height: 90px;
 }
 
@@ -103,9 +103,4 @@ width: 250px;
 
 .text__label {
     color: white;
-}
-
-.laboratory__img {
-    width: 100%; 
-    height: 300px;
 }
