--- a/style.css
+++ b/style.css
@@ -78,15 +78,21 @@ width: 250px;
 }
 
 .label {
-    font-size: 50px;
+    font-size: 42px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 800;
+    color: white;
+    width: 400px;
+    text-align: center;
 }
 
 .label-subtext {
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-family: Olivetti Typewriter Wide;
     font-weight: 300;
+    color: white;
+    width: 400px;
+    text-align: center;
 }
 
 .container__img {
@@ -103,4 +109,13 @@ width: 250px;
 
 .text__label {
     color: white;
+}
+
+#uno-dos {
+    position: absolute;
+    top: 200px;
+    left: 0;
+    right: -500px;
+    margin: 0 auto;
+    width: 250px;
 }
