--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 }
 
 
-.left{
+.container__left{
     width: 50%;
     height: 300px;
     float: left; 
@@ -39,7 +39,7 @@
     margin-bottom:auto;
     text-align:center;
 }
-.right{
+.container__right{
     width: 50%;
     float: right; 
 }
@@ -103,7 +103,7 @@ width: 250px;
     text-align:center;
 }
 
-.text__label {
+.container__label-left {
     color: white;
     font-family: Olivetti Typewriter Wide;
 }
@@ -117,6 +117,7 @@ width: 250px;
     width: 250px;
 }
 
-.table {
-    width: 100%;
+.container__img-right {
+    width: 100%; 
+    height: 300px;
 }
