--- a/style.css
+++ b/style.css
@@ -121,3 +121,9 @@ width: 250px;
     width: 100%; 
     height: 300px;
 }
+
+.container__buttom {
+    width: 50px; 
+    height: 50px; 
+    border-radius: 100%;
+}
