--- a/style.css
+++ b/style.css
@@ -127,3 +127,8 @@ width: 250px;
     height: 50px; 
     border-radius: 100%;
 }
+
+.container__background-img {
+    width: 100%;
+    height: 500px;
+}
